--- a/index.html
+++ b/index.html
@@ -60,7 +60,11 @@
             </li>
           </ul>
         </address>
-        <button type="button" class="mobile-menu-open-btn js-open-menu" aria-expanded="false">
+        <button
+          type="button"
+          class="mobile-menu-open-btn js-open-menu"
+          aria-expanded="false"
+        >
           <svg class="mobile-menu-open-btn-icon" width="32" height="22">
             <use href="./images/icons.svg#icon-hamburger"></use>
           </svg>
@@ -74,83 +78,87 @@
             </svg>
           </button>
           <div class="nav-list-mobile-container">
-          <ul class="list nav-list-mobile ">
-            <li>
-              <a
-                class="link nav-list-mobile-item"
-                href="./index.html">Studio</a>
+            <ul class="list nav-list-mobile">
+              <li>
+                <a class="link nav-list-mobile-item" href="./index.html"
+                  >Studio</a
+                >
               </li>
-            <li>
-              <a class="link nav-list-mobile-item" href="./portfolio.html"
-                >Portfolio</a
-              ></li>
-            <li>
-              <a class="link nav-list-mobile-item" href="#">Contacts</a></li>
-          </ul>
-          <div>
-          <ul class="list link nav-list-mobile-contact">
-            <li>
-              <a class="contact-mobile link" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              >
-            </li>
-            <li>
-              <a class="contact-email-mobile link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-          </ul>
-          <ul class="list link nav-list-mobile-network">
-            <li class="social-network-item">
-              <a href="" class="footer-social-network-link">
-                <svg
-                  class="footer-social-network-icon"
-                  aria-label="іконка інстаграму"
-                  width="24"
-                  height="24"
+              <li>
+                <a class="link nav-list-mobile-item" href="./portfolio.html"
+                  >Portfolio</a
                 >
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-network-item">
-              <a href="" class="footer-social-network-link">
-                <svg
-                  class="footer-social-network-icon"
-                  aria-label="іконка твітера"
-                  width="24"
-                  height="24"
-                >
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-network-item">
-              <a href="" class="footer-social-network-link">
-                <svg
-                  class="footer-social-network-icon"
-                  aria-label="іконка фейсбук"
-                  width="24"
-                  height="24"
-                >
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-network-item">
-              <a href="" class="footer-social-network-link">
-                <svg
-                  class="footer-social-network-icon"
-                  aria-label="іконка лінкедина"
-                  width="24"
-                  height="24"
-                >
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-          </div>
+              </li>
+              <li>
+                <a class="link nav-list-mobile-item" href="#">Contacts</a>
+              </li>
+            </ul>
+            <div>
+              <ul class="list link nav-list-mobile-contact">
+                <li>
+                  <a class="contact-mobile link" href="tel:+110001111111"
+                    >+11 (000) 111-11-11</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="contact-email-mobile link"
+                    href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a
+                  >
+                </li>
+              </ul>
+              <ul class="list link nav-list-mobile-network">
+                <li class="social-network-item">
+                  <a href="" class="footer-social-network-link">
+                    <svg
+                      class="footer-social-network-icon"
+                      aria-label="іконка інстаграму"
+                      width="24"
+                      height="24"
+                    >
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-network-item">
+                  <a href="" class="footer-social-network-link">
+                    <svg
+                      class="footer-social-network-icon"
+                      aria-label="іконка твітера"
+                      width="24"
+                      height="24"
+                    >
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-network-item">
+                  <a href="" class="footer-social-network-link">
+                    <svg
+                      class="footer-social-network-icon"
+                      aria-label="іконка фейсбук"
+                      width="24"
+                      height="24"
+                    >
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-network-item">
+                  <a href="" class="footer-social-network-link">
+                    <svg
+                      class="footer-social-network-icon"
+                      aria-label="іконка лінкедина"
+                      width="24"
+                      height="24"
+                    >
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
@@ -161,7 +169,7 @@
     <main>
       <!-- сторінка герой  -->
 
-     <section class="hero-section">
+      <section class="hero-section">
         <div class="container-hero">
           <h1 class="main-title">
             Effective Solutions <br />
@@ -229,7 +237,7 @@
             </li>
           </ul>
         </div>
-      </section> 
+      </section>
 
       <!-- приклади робіт  -->
 
@@ -310,7 +318,8 @@
                   "
                   type="image/webp"
                 />
-                <img class="our-team-photo"
+                <img
+                  class="our-team-photo"
                   srcset="./images/our-team/mark-guerrero@2x.jpg 2x"
                   src="./images/our-team/mark-guerrero.jpg"
                   alt="Mark Guerrero"
@@ -382,7 +391,8 @@
                   "
                   type="image/webp"
                 />
-                <img class="our-team-photo"
+                <img
+                  class="our-team-photo"
                   srcset="./images/our-team/tom-ford@2x.png 2x"
                   src="./images/our-team/tom-ford.jpg"
                   alt="Tom Ford"
@@ -454,7 +464,8 @@
                   "
                   type="image/webp"
                 />
-                <img class="our-team-photo"
+                <img
+                  class="our-team-photo"
                   srcset="./images/our-team/camila-garcia@2x.jpg 2x"
                   src="./images/our-team/camila-garcia.jpg"
                   alt="Camila Garcia"
@@ -526,7 +537,8 @@
                   "
                   type="image/webp"
                 />
-                <img class="our-team-photo"
+                <img
+                  class="our-team-photo"
                   srcset="./images/our-team/daniel-wilson@2x.jpg 2x"
                   src="./images/our-team/daniel-wilson.jpg"
                   alt="Daniel Wilson"
@@ -591,9 +603,9 @@
             </li>
           </ul>
         </div>
-      </section> 
+      </section>
 
-      <!-- Список клієнтів 
+      <!-- Список клієнтів -->
 
       <section class="section">
         <div class="container">
@@ -644,9 +656,9 @@
           </ul>
         </div>
       </section>
-    </main> -->
+    </main>
 
-    <!-- Футер 
+    <!-- Футер -->
 
     <footer class="footer">
       <div class="container footer-container">
@@ -739,7 +751,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <!-- Модалка -->
 
