--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!-- хедер -->
+    <!------------------------------ HEADER ------------------------------>
 
     <header class="page-header">
       <div class="container page-header-container">
@@ -72,7 +72,7 @@
       </div>
       <div class="mobile-menu js-menu-container">
         <div class="container mobile-menu-container">
-          <button class="mobile-menu-close-btn js-close-menu">
+          <button type="button" class="mobile-menu-close-btn js-close-menu">
             <svg class="mobile-menu-close-icon" width="8" height="8">
               <use href="./images/icons.svg#icon-close-btn"></use>
             </svg>
@@ -80,7 +80,9 @@
           <div class="nav-list-mobile-container">
             <ul class="list nav-list-mobile">
               <li>
-                <a class="link nav-list-mobile-item" href="./index.html"
+                <a
+                  class="link nav-list-mobile-item nav-mobile-color"
+                  href="./index.html"
                   >Studio</a
                 >
               </li>
@@ -175,7 +177,7 @@
             Effective Solutions <br />
             for Your Business
           </h1>
-          <button class="order-service-btn" type="button" data-modal-open>
+          <button type="button" class="order-service-btn" data-modal-open>
             Order Service
           </button>
         </div>
@@ -662,67 +664,69 @@
 
     <footer class="footer">
       <div class="container footer-container">
-        <div class="footer-description-container">
-          <a class="logo link footer-logo-link" href="./index.html"
-            >WEB<span class="logo-web-footer">Studio</span></a
-          >
-          <p class="footer-description">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
-        <div class="footer-social-network-conteiner">
-          <p class="social-media-title">Social media</p>
-          <ul class="social-network-list-footer list">
-            <li class="social-network-item">
-              <a href="" class="footer-social-network-link">
-                <svg
-                  class="footer-social-network-icon"
-                  aria-label="іконка інстаграму"
-                  width="24"
-                  height="24"
-                >
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-network-item">
-              <a href="" class="footer-social-network-link">
-                <svg
-                  class="footer-social-network-icon"
-                  aria-label="іконка твітера"
-                  width="24"
-                  height="24"
-                >
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-network-item">
-              <a href="" class="footer-social-network-link">
-                <svg
-                  class="footer-social-network-icon"
-                  aria-label="іконка фейсбук"
-                  width="24"
-                  height="24"
-                >
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-network-item">
-              <a href="" class="footer-social-network-link">
-                <svg
-                  class="footer-social-network-icon"
-                  aria-label="іконка лінкедина"
-                  width="24"
-                  height="24"
-                >
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+        <div class="footer-description-media">
+          <div class="footer-description-container">
+            <a class="logo link footer-logo-link" href="./index.html"
+              >WEB<span class="logo-web-footer">Studio</span></a
+            >
+            <p class="footer-description">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
+          <div class="footer-social-network-conteiner">
+            <p class="social-media-title">Social media</p>
+            <ul class="social-network-list-footer list">
+              <li class="social-network-item">
+                <a href="" class="footer-social-network-link">
+                  <svg
+                    class="footer-social-network-icon"
+                    aria-label="іконка інстаграму"
+                    width="24"
+                    height="24"
+                  >
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-network-item">
+                <a href="" class="footer-social-network-link">
+                  <svg
+                    class="footer-social-network-icon"
+                    aria-label="іконка твітера"
+                    width="24"
+                    height="24"
+                  >
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-network-item">
+                <a href="" class="footer-social-network-link">
+                  <svg
+                    class="footer-social-network-icon"
+                    aria-label="іконка фейсбук"
+                    width="24"
+                    height="24"
+                  >
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-network-item">
+                <a href="" class="footer-social-network-link">
+                  <svg
+                    class="footer-social-network-icon"
+                    aria-label="іконка лінкедина"
+                    width="24"
+                    height="24"
+                  >
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
         <div class="footer-subscribe-box">
           <p class="subscribe-title">Subscribe</p>
