--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <body>
     <!------------------------------ HEADER ------------------------------>
 
-    <header class="page-header">
-      <div class="container page-header-container">
+    <header class="container page-header">
+      <div class="page-header-container">
         <nav class="header-nav">
           <a class="logo link header-logo" href="./index.html"
             >WEB<span class="logo-web">Studio</span></a
